Revert "Fixed spacing on GitHub Pages"
This reverts commit cee182c2f2c7b81cb23a7c9401aa0b46b3f144be.

--- a/src/SortingVisualizing/SortingVisualizing.css
+++ b/src/SortingVisualizing/SortingVisualizing.css
@@ -69,7 +69,7 @@ body {
   justify-content: space-between;
   padding-left: 13rem;
   padding-right: 15rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2.5rem;
   gap: 5rem;
   flex-shrink: 1;
 
